kustomize/rclone/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"traefik"},"name":"rclone-ingress","namespace":"rclone"},"spec":{"rules":[{"host":"backup.stillon.top","http":{"paths":[{"backend":{"service":{"name":"rclone","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"host":"duplicati.stillon.top","http":{"paths":[{"backend":{"service":{"name":"rclone","port":{"number":80}}}," [...]
      kubernetes.io/ingress.class: traefik
    creationTimestamp: "2024-09-23T18:10:41Z"
    generation: 1
    name: rclone-ingress
    namespace: rclone
    resourceVersion: "16371015"
    uid: 1da2867e-38a4-400b-956a-79f70c431c31
  spec:
    rules:
    - host: backup.stillon.top
      http:
        paths:
        - backend:
            service:
              name: rclone
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: duplicati.stillon.top
      http:
        paths:
        - backend:
            service:
              name: rclone
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - backup.stillon.top
      - duplicati.stillon.top
      secretName: rclone-tls
  status:
    loadBalancer:
      ingress:
      - ip: 161.97.88.129
kind: List
metadata:
  resourceVersion: ""
